--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
